5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1644_2447.log
== TEST (2019-04-16 11:44:19) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if a>b:
	print(falta (round (x), 2))

else a<b:
	print(troco de (round (y), 2))
	
-- ERROR:
File "XXXX", line 13
    else a<b:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:06) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if a>b:
	print("falta" (round (x), 2))

else a<b:
	print("troco de "(round (y), 2))
	
-- ERROR:
File "XXXX", line 13
    else a<b:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:23) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	print("falta" (round (x), 2))

else:
	print("troco de "(round (y), 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print("falta" (round (x), 2))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:37) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	print("falta" (round(x, 2))

else:
	print("troco de "(round(y, 2))
	
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:49:47) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	s="falta"+" "+x
else:
	s=y"Troco+"+" "+y 
print(s)
	
	
-- ERROR:
File "XXXX", line 13
    s=y"Troco+"+" "+y 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:49:54) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	s="falta"+" "+x
else:
	s=y"Troco"+" "+y 
print(s)
	
	
-- ERROR:
File "XXXX", line 13
    s=y"Troco"+" "+y 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:50:04) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	s="falta"+" "+x
else:
	s="Troco"+" "+y 
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    s="falta"+" "+x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:50:38) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago: "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	s="falta"+" "+x
else:
	s="Troco"+" "+y 
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    s="falta"+" "+x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:50:52) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preco da mercadoria: "))
b=float(input("digite o valor pago: "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	s="falta"+" "+x
else:
	s="Troco"+" "+y 
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    s="falta"+" "+x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:51:21) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preco da mercadoria: "))
b=float(input("digite o valor pago: "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	s="falta"+" "+x
else:
	s="Troco de"+" "+y 
print(s)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    s="falta"+" "+x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:07:23) 
-- CODE:
#Leia dois numeros reais
a=float(input("digite o preço da mercadoria: "))
b=float(input("digite o valor pago: "))

#calcule a diferenca
x = a-b
y = b-a

#condicao e impress
if (a>b):
	s=("Falta"+" "+str(x))
else:
	s=("Troco de"+" "+str(y))
print(s)
-- EXECUTION TIME:
0.171482
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
